--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "",
   "main": "startup.js",
   "scripts": {
-    "start": "nodemon startup.js"
+    "start": "nodemon startup.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "handlebars": "^4.5.3",
     "mssql": "^6.0.1",
     "nodemon": "^2.0.1",
+    "passport": "^0.4.0",
     "vanilla-router": "^1.2.7"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
