--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mssql": "^6.0.1",
     "nodemon": "^2.0.1",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "vanilla-router": "^1.2.7"
   },
   "devDependencies": {
