--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "handlebars": "^4.5.3",
+    "express-handlebars": "^3.1.0",
     "mssql": "^6.0.1",
     "nodemon": "^2.0.1",
+    "object-assign": "^4.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "vanilla-router": "^1.2.7"
