--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "vanilla-router": "^1.2.7"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.7",
+    "babelify": "^10.0.0",
+    "jest": "^24.9.0",
+    "qunit": "^2.9.3"
   }
 }
