--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "kingslandingproject",
+  "jest": {
+    "verbose": true,
+    "testMatch": [
+      "**/Tests.Jest/**/*.[jt]s?(x)"
+    ]
+  },
   "version": "1.0.0",
   "description": "",
   "main": "startup.js",
   "scripts": {
     "start": "nodemon startup.js",
-    "test": "jest"
+    "jest-tests": "jest",
+    "qunit-test.browser": "qunit"
   },
   "author": "",
   "license": "ISC",
@@ -27,8 +34,8 @@
     "@babel/core": "^7.7.7",
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.7",
+    "ava": "^2.4.0",
     "babelify": "^10.0.0",
-    "jest": "^24.9.0",
-    "qunit": "^2.9.3"
+    "jest": "^24.9.0"
   }
 }
