--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mssql": "^6.0.1",
     "nodemon": "^2.0.1",
     "object-assign": "^4.1.1",
