time logs fetching bugfix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "editor.formatOnSave": false,
+  "editor.formatOnSave": true,
   "vscode-qunit.file":"D:/VsCodeProjects/KingsLandingProject/Tests.Qunit/index.html",
   "vscode-qunit.showExecutionTimes": true,
   "liveSassCompile.settings.formats": [
