--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "nodemon startup.js",
     "test-jest": "jest",
     "test-mocha": "mocha --watch tests/mocha/**/*.js",
+    "test-jasmine": "jasmine --config=jasmine.json",
+    "test-ava": "ava",
+    "test-qunit": "qunit tests/qunit/master-thesis/tests.spec.js",
     "qunit-test.browser": "qunit"
   },
   "author": "",
@@ -36,7 +39,11 @@
     "chai-as-promised": "^7.1.1",
     "chai-match": "^1.1.1",
     "jasmine": "^3.5.0",
+    "jasmine-terminal-reporter": "^1.0.3",
     "jest": "^24.9.0",
-    "mocha": "^7.1.0"
+    "mocha": "^7.1.0",
+    "node-qunit": "^1.0.0",
+    "qunit": "^2.9.3",
+    "qunit-cli": "^0.2.0"
   }
 }
