--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "startup.js",
   "scripts": {
     "start": "nodemon startup.js",
-    "test-jest": "jest",
+    "test-jest": "jest --watch",
     "test-mocha": "mocha --watch tests/mocha/**/*.js",
     "test-jasmine": "jasmine --config=jasmine.json",
     "test-ava": "ava",
@@ -33,8 +33,9 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-env": "^7.8.7",
     "ava": "^2.4.0",
+    "babel-jest": "^25.1.0",
     "babelify": "^10.0.0",
     "browser-env": "^3.3.0",
     "chai": "^4.2.0",
